<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ahmed.myportfolioapp.MainActivity"
    android:gravity="center_horizontal"
    tools:showIn="@layout/activity_main"
    android:background="#E6EEF3">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/my_nano_degree_apps"
        android:layout_centerHorizontal="true"
        android:textColor="#0F4396" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:text="@string/spotify_streamer"
            android:onClick="launchApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:text="@string/scores_app"
            android:onClick="launchApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:text="@string/library_app"
            android:onClick="launchApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:text="@string/build_it_bigger"
            android:onClick="launchApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:text="@string/xyz_reader"
            android:onClick="launchApp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:background="#BC4031"
            android:text="@string/capstone_my_own_app"
            android:onClick="launchApp" />

    </LinearLayout>


</RelativeLayout>
